[package]
name = "dnslocalctl"
version = "0.1.0"
edition = "2021"
authors = ["De-Great Yartey <mail@degreat.co.uk>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
local-ip-address = "0.5.6"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tiny_http = "0.12.0"
